--- a/app/views/user/_nav_left.html.erb
+++ b/app/views/user/_nav_left.html.erb
@@ -1,41 +1,44 @@
-<nav class="navbar navbar-default nav-left">
- <p class="text-primary self-info"><strong>个人中心</strong></p>
-
-  <ul class="nav nav-pills nav-stacked center-block">
-    <li class="active">
-      <%= link_to my_courses_user_index_path do %>
-      	<span class="glyphicon glyphicon-sound-dolby" aria-hidden="true"></span> 我的课程
-      <% end %>
-    </li>
-    <li>
-      <%= link_to my_exams_user_index_path do %>
-      	<span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 我的考试
-      <% end %>
-    </li>
-     <li>
-      <%= link_to score_search_user_index_path do %>
-      	<span class="glyphicon glyphicon-search" aria-hidden="true"></span> 成绩查询
-      <% end %>
-    </li>
-     <li>
-      <%= link_to my_collect_user_index_path do %>
-      	<span class="glyphicon glyphicon-star" aria-hidden="true"></span> 我的收藏
-      <% end %>
-    </li>
-     <li>
-      <%= link_to questions_answers_user_index_path do %>
-      	<span class="glyphicon glyphicon-tag" aria-hidden="true"></span> 我的问答
-      <% end %>
-    </li>
-     <li>
-      <%= link_to discuss_center_user_index_path do %>
-      	<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> 讨论中心
-      <% end %>
-    </li>
-    <li>
-      <%= link_to user_index_path do %>
-      	<span class="glyphicon glyphicon-user" aria-hidden="true"></span> 我的账户
-      <% end %>
-    </li>
-  </ul>
-</nav>
+<div id="left-bar">
+  <div class="out-wrap">
+    <div class="top-title">
+      个人中心
+    </div>
+    <ul class="list">
+      <li class="active">
+        <%= link_to my_courses_user_index_path do %>
+          <span class="glyphicon glyphicon-sound-dolby" aria-hidden="true"></span> 我的课程
+        <% end %>
+      </li>
+      <li>
+        <%= link_to my_exams_user_index_path do %>
+          <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 我的考试
+        <% end %>
+      </li>
+       <li>
+        <%= link_to score_search_user_index_path do %>
+          <span class="glyphicon glyphicon-search" aria-hidden="true"></span> 成绩查询
+        <% end %>
+      </li>
+       <li>
+        <%= link_to my_collect_user_index_path do %>
+          <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 我的收藏
+        <% end %>
+      </li>
+       <li>
+        <%= link_to questions_answers_user_index_path do %>
+          <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> 我的问答
+        <% end %>
+      </li>
+       <li>
+        <%= link_to discuss_center_user_index_path do %>
+          <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> 讨论中心
+        <% end %>
+      </li>
+      <li>
+        <%= link_to user_index_path do %>
+          <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> 我的账户
+        <% end %>
+      </li>
+    </ul>
+  </div>
+</div>
