--- a/app/views/user/my_exams.html.erb
+++ b/app/views/user/my_exams.html.erb
@@ -16,56 +16,34 @@
 	  <div class="row self-main-context">
 
 	    <ul class="nav nav-pills show-content">
-        <li role="presentation" class="active"><%= link_to "正在进行的考试","#" %></li>
-        <li role="presentation"><%= link_to "完成的考试","#" %></li>
+        <li role="presentation" class="active"><%= link_to "完成的考试","#" %></li>
         <li role="presentation"><%= link_to "即将开始的考试","#" %></li>
       </ul>
-      <!-- ###########################正在进行的考试########################## -->
-      <div class="my-exams-container div-content">
-        <div class="row my-exams">
-          <div class="col-sm-3 ov-hidden">
-            <%= image_tag "my-course.png" %>
-            <span class="badge">7%</span>
-          </div>
-          <div class="col-sm-7">
-            <div class="my-exams-desc"> 
-              <h4>CSS实现网页平滑过渡效果<br>
-                <small>
-                  <span>考试时间：1小时30分钟</span>
-                  <span>已经进行：35分钟</span>
-                </small>
-              </h4><br>
-              <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
-            </div>
-          </div>
-          <div class="col-sm-2">
-              <button type="button" class="btn btn-info">继续考试</button>
-            </div>
-        </div>
-	    </div>
-      <!-- ###########################正在进行的考试########################## -->
 
       <!-- ###########################完成的考试########################## -->
-      <div class="my-exams-container div-content" style="display: none;">
-        <div class="row my-exams">
-          <div class="col-sm-3 ov-hidden">
-            <%= image_tag "my-course.png" %>
-          </div>
-          <div class="col-sm-9">
-            <div class="my-exams-desc"> 
-              <h4>CSS实现网页平滑过渡效果<br>
-                <small>
-                  <span>考试时间：1小时30分钟</span>
-                  <span>考试结束时间：2015-06-15 18:00:00</span>
-                </small>
-              </h4><br>
-              <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
+      <div class="my-exams-container div-content">
+        <% if @complete_exams.blank? %>
+          <div class="blank">没有已完成的考试</div>
+        <% else %>
+          <% @complete_exams.each do |exam| %>
+            <div class="row my-exams">
+              <div class="col-sm-3 ov-hidden">
+                <%= image_tag "my-course.png" %>
+              </div>
+              <div class="col-sm-9">
+                <div class="my-exams-desc"> 
+                  <h4><%= exam.try(:sub_course).try(:name)%><br>
+                    <small>
+                      <span>考试时间：40分钟</span>
+                    </small>
+                  </h4><br>
+                  <p><%= exam.try(:sub_course).try(:content)%></p>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="col-sm-3">
-              <button type="button" class="btn btn-info">继续考试</button>
-            </div>
-        </div>
+          <% end %>
+        <% end %>
+        
       </div>
       <!-- ###########################完成的考试########################## -->
 
