--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,10 +9,10 @@
 <div class="main-content">
   <section class="common-title">
   	<span class="pull-left">精品课程</span>
-  	<span class="pull-right common"><%= link_to "更多", "#", class: "more" %></span>
+  	<!--<span class="pull-right common"><%= link_to "更多", "#", class: "more" %></span>-->
   </section>
   <section class="department-tabs">
-    <span><%= link_to "珠宝系", "#", class: "first-tab factive"%></span>
+    <span><%= link_to "全部", "#", class: "first-tab factive"%></span>
     <span><%= link_to "艺术设计系"%></span>
     <span><%= link_to "汽车工程系"%></span>
     <span><%= link_to "应用外语系"%></span>
@@ -28,40 +28,21 @@
     	    <%= link_to image_tag("vedio-bg.png"), show_courses_path(course.number)%>
     	    <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
     	    <p class="description">
-            <span class="pull-left"><%= link_to course.description, show_courses_path(course.number) %></span>
-            <a class="pull-right favorite">20000人收藏</a>
+            <span class="pull-left section"><%= link_to course.description.to_s[0..10], show_courses_path(course.number) %></span>
+            <label class="pull-right section" >
+              <%= link_to "" do%>
+                <span class="glyphicon glyphicon-star"></span>
+              <%end%>
+              <span class="favorite">20000人收藏</span>
+            </label>
           </p>
     	  </div>
-      </div>
-    <%end%>
-    <% @courses.each do |course|%>
-      <div class='single-vedio-content'>
-        <div class="vedio-content">
-          <%= link_to image_tag("vedio-bg.png"), show_courses_path(course.number)%>
-          <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
-          <p class="description">
-            <span class="pull-left"><%= link_to course.description, show_courses_path(course.number) %></span>
-            <a class="pull-right favorite">20000人收藏</a>
-          </p>
-        </div>
-      </div>
-    <%end%>
-    <% @courses.each do |course|%>
-      <div class='single-vedio-content'>
-        <div class="vedio-content">
-          <%= link_to image_tag("vedio-bg.png"), show_courses_path(course.number)%>
-          <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
-          <p class="description">
-            <span class="pull-left"><%= link_to course.description, show_courses_path(course.number) %></span>
-            <a class="pull-right favorite">20000人收藏</a>
-          </p>
-        </div>
       </div>
     <%end%>
   </div>
   <section class="common-title">
   	<span class="pull-left">教师风采</span>
-  	<span class="pull-right"><%= link_to "更多", "#", class: "more" %></span>
+  	<!-- <span class="pull-right"><%= link_to "更多", "#", class: "more" %></span> -->
   </section>
   <div class="info-teachers-content wrapper">
     <% @teachers.each do |teacher|%>
@@ -73,7 +54,7 @@
   </div>
   <section class="common-title">
   	<span class="pull-left">校园文化</span>
-  	<span class="pull-right"><%= link_to "更多", "#", class: "more" %></span>
+  	<!-- <span class="pull-right"><%= link_to "更多", "#", class: "more" %></span> -->
   </section>
 
   <div id="xc-carousel" class="xc-carousel">
