fix style && controller

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -21,10 +21,12 @@
       <h1>IOS图形界面开发</h1>
       <div class="collect-zan-btns">
         <%= link_to "", class: "btn btn-default " do %>
-          <span class="glyphicon glyphicon-star">取消收藏</span>
+          <span class="glyphicon glyphicon-star"></span>
+          <span>取消收藏</span>
         <%end%>
         <%= link_to "", class: "btn btn-default" do %>
-          <span class="glyphicon glyphicon-heart">360个赞</span>
+          <span class="glyphicon glyphicon-heart"></span>
+          <span>360个赞</span>
         <%end%>
       </div>
       <ul class="course-main">
