--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,14 +29,42 @@
     	    <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
     	    <p class="description">
             <span class="pull-left section"><%= link_to course.description.to_s[0..10], show_courses_path(course.number) %></span>
-            <label class="pull-right section" >
-              <%= link_to "" do%>
-                <span class="glyphicon glyphicon-star"></span>
-              <%end%>
-              <span class="favorite">20000人收藏</span>
-            </label>
+            <span class="pull-right">
+              <span class="glyphicon glyphicon-star"></span>
+              <%= course.get_likes(vote_scope: "collect").size %>人收藏
+            </span>
           </p>
     	  </div>
+      </div>
+    <%end%>
+    <% @courses.each do |course|%>
+      <div class='single-vedio-content'>
+        <div class="vedio-content">
+          <%= link_to image_tag("vedio-bg.png"), show_courses_path(course.number)%>
+          <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
+          <p class="description">
+            <span class="pull-left section"><%= link_to course.description.to_s[0..10], show_courses_path(course.number) %></span>
+            <span class="pull-right">
+              <span class="glyphicon glyphicon-star"></span>
+              <%= course.get_likes(vote_scope: "collect").size %>人收藏
+            </span>
+          </p>
+        </div>
+      </div>
+    <%end%>
+    <% @courses.each do |course|%>
+      <div class='single-vedio-content'>
+        <div class="vedio-content">
+          <%= link_to image_tag("vedio-bg.png"), show_courses_path(course.number)%>
+          <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
+          <p class="description">
+            <span class="pull-left section"><%= link_to course.description.to_s[0..10], show_courses_path(course.number) %></span>
+            <span class="pull-right">
+              <span class="glyphicon glyphicon-star"></span>
+              <%= course.get_likes(vote_scope: "collect").size %>人收藏
+            </span>
+          </p>
+        </div>
       </div>
     <%end%>
   </div>
