--- a/app/views/user/my_collect.html.erb
+++ b/app/views/user/my_collect.html.erb
@@ -30,14 +30,14 @@
           <div class="col-sm-4">
             <div class="panel panel-default">
               <div class="panel-body">
-                <div class="ov-hidden"><%= image_tag "my_collect1.png" %></div>
+                <div class="ov-hidden"><%= link_to image_tag("my_collect1.png"), show_courses_path(course.number)%></div>
                 <div class="collect-desc">
-                  <h5><%= course.name %></h5>
+                  <h5><%= link_to course.name, show_courses_path(course.number) %></h5>
                   <div>
                     该课程一个15个课时
                     <span class="pull-right">
                       <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                      <%= course.votes_for.size %>人收藏
+                      <%= course.get_likes(vote_scope: :collect).size %>人收藏
                     </span>
                   </div>  
                 </div>
