comment add filed

--- a/app/views/user/_nav_left.html.erb
+++ b/app/views/user/_nav_left.html.erb
@@ -4,41 +4,82 @@
       个人中心
     </div>
     <ul class="list">
-      <li class="active">
+      <div class="list-bg"></div>
+      <li>
         <%= link_to my_courses_user_index_path do %>
-          <span class="glyphicon glyphicon-sound-dolby" aria-hidden="true"></span> 我的课程
+          <span class="glyphicon glyphicon-sound-dolby" aria-hidden="true">我的课程</span> 
         <% end %>
       </li>
       <li>
         <%= link_to my_exams_user_index_path do %>
-          <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 我的考试
+          <span class="glyphicon glyphicon-edit" aria-hidden="true">我的考试</span> 
         <% end %>
       </li>
        <li>
         <%= link_to score_search_user_index_path do %>
-          <span class="glyphicon glyphicon-search" aria-hidden="true"></span> 成绩查询
+          <span class="glyphicon glyphicon-search" aria-hidden="true">成绩查询</span> 
         <% end %>
       </li>
        <li>
         <%= link_to my_collect_user_index_path do %>
-          <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 我的收藏
+          <span class="glyphicon glyphicon-star" aria-hidden="true">我的收藏</span> 
         <% end %>
       </li>
        <li>
         <%= link_to questions_answers_user_index_path do %>
-          <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> 我的问答
+          <span class="glyphicon glyphicon-tag" aria-hidden="true">我的问答</span> 
         <% end %>
       </li>
        <li>
         <%= link_to discuss_center_user_index_path do %>
-          <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> 讨论中心
+          <span class="glyphicon glyphicon-list-alt" aria-hidden="true">讨论中心</span> 
         <% end %>
       </li>
       <li>
         <%= link_to user_index_path do %>
-          <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> 我的账户
+          <span class="glyphicon glyphicon-cog" aria-hidden="true">我的账户</span> 
         <% end %>
       </li>
     </ul>
   </div>
 </div>
+
+<script type="text/javascript">
+  $(function(){
+    if("<%= controller.controller_path %>" == "user" && "<%= controller.action_name%>" == "my_courses"){
+      $("#left-bar .list .list-bg").css("top", "62px");
+      $("#left-bar .list li").eq(0).find("a").addClass("active");
+      $("#left-bar .list li").eq(0).siblings().find("a").removeClass("active");
+    }
+    else if("<%= controller.controller_path %>" == "user" && "<%= controller.action_name%>" == "my_exams"){
+      $("#left-bar .list .list-bg").css("top", "128px");
+      $("#left-bar .list li").eq(1).find("a").addClass("active");
+      $("#left-bar .list li").eq(1).siblings().find("a").removeClass("active");
+    }
+    else if("<%= controller.controller_path %>" == "user" && "<%= controller.action_name%>" == "score_search"){
+      $("#left-bar .list .list-bg").css("top", "194px");
+      $("#left-bar .list li").eq(2).find("a").addClass("active");
+      $("#left-bar .list li").eq(2).siblings().find("a").removeClass("active");
+    }
+    else if("<%= controller.controller_path %>" == "user" && "<%= controller.action_name%>" == "my_collect"){
+      $("#left-bar .list .list-bg").css("top", "260px");
+      $("#left-bar .list li").eq(3).find("a").addClass("active");
+      $("#left-bar .list li").eq(3).siblings().find("a").removeClass("active");
+    }
+    else if("<%= controller.controller_path %>" == "user" && "<%= controller.action_name%>" == "questions_answers"){
+      $("#left-bar .list .list-bg").css("top", "326px");
+      $("#left-bar .list li").eq(4).find("a").addClass("active");
+      $("#left-bar .list li").eq(4).siblings().find("a").removeClass("active");
+    }
+    else if("<%= controller.controller_path %>" == "user" && "<%= controller.action_name%>" == "discuss_center"){
+      $("#left-bar .list .list-bg").css("top", "392px");
+      $("#left-bar .list li").eq(5).find("a").addClass("active");
+      $("#left-bar .list li").eq(5).siblings().find("a").removeClass("active");
+    }
+    else if("<%= controller.controller_path %>" == "user" && "<%= controller.action_name%>" == "show"){
+      $("#left-bar .list .list-bg").css("top", "458px");
+      $("#left-bar .list li").eq(6).find("a").addClass("active");
+      $("#left-bar .list li").eq(6).siblings().find("a").removeClass("active");
+    }
+  });
+</script>
