--- a/app/views/user/questions_answers.html.erb
+++ b/app/views/user/questions_answers.html.erb
@@ -22,23 +22,49 @@
 
       <!-- ###############################我的提问##################### -->
       <div class="div-content questions-answers-content">
-      <% (1..8).each do |i| %>
-        <div class="row questions-answers-list">
-          <div class="col-sm-1">
-            <%= image_tag current_user.image.present? ? current_user.try(:image).try(:avatar).try(:url, :thumb) : "missing.png", class: "img-rounded max60" %>
-          </div>
-          <div class="col-sm-9">
-            <div>奋斗在路上 <span class="grey-font">提问</span></div>
-            <p>【小牧送福利了】小牧带你参加GO语言与Gocker分享会！速度报名哦</p><br>
-            <div class="grey-font">时间：2小时前</div>
-          </div>
-          <div class="col-sm-2 grey-font">
-            <table class="table no-border">
-              <tr align="center"><td>0</td><td class="left-border">1</td></tr>
-              <tr align="center"><td>回答</td><td class="left-border">浏览</td></tr>
-            </table>
-          </div>
-        </div>
+        <% if @question_comments.blank? %>
+        <div class="blank">暂时没有评论</div>
+        <% else %>
+          <% @question_comments.each do |comment| %>
+            <div class="row questions-answers-list">
+              <div class="col-sm-1 no-padding">
+                <%= image_tag comment.try(:usertable).try(:image).try(:avatar).try(:url, :thumb),class: "img-rounded max60" %>
+                <p class="center-block grey-font"><%= comment.try(:usertable).try(:name) %></p>
+              </div>
+              <div class="col-sm-9">
+                <h5>
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+                  <%= comment.body %>
+                </h5>
+                <p>
+                  <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                  <% if comment.has_children? %>
+                    <span class="text-muted">[最新回答]</span>
+                    <span><%= comment.children.last.try(:usertable).try(:name) %>:<span>
+                    <span class="text-muted"><%= comment.children.last.try(:body) %></span>
+                  <% else %>
+                    <span class="text-muted">嗯 ~ ~，这个提问大家都在考虑....</span>
+                  <% end %>
+                </p><br>
+                <div class="grey-font">
+                  <%= comment.created_at.try(:strftime,'%Y-%m-%d %H:%M:%S') %>
+                  <span class="label label-default">JavaScript</span>
+                </div>
+              </div>
+              <div class="col-sm-2">
+                <table class="table no-border">
+                  <tr align="center">
+                    <td class="<%= comment.has_children? ? "text-success" : "text-muted"%>"><%= comment.children.size %></td>
+                    <td class="left-border">0</td>
+                  </tr>
+                  <tr align="center">
+                    <td class="<%= comment.has_children? ? "text-success" : "text-muted"%>">回答</td>
+                    <td class="left-border">浏览</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          <% end %>
         <% end %>
 	    </div>
       <!-- ###############################我的提问##################### -->
