--- a/app/views/teachers/my_account.html.erb
+++ b/app/views/teachers/my_account.html.erb
@@ -10,31 +10,37 @@
   		<a href="javascript:void(0)" class="btn btn-default">修改密码</a>
   	</div>
   	<div class="teacher-info-content teacher-wrapper">
-  		<div class="infos">
+  		<div class="infos col-sm-offset-3">
 		  	<%= simple_form_for(current_teacher, url: teacher_path(current_teacher.id), html: { class: 'form-horizontal' }, wrapper: :horizontal_form, wrapper_mappings: {file: :horizontal_file_input, radio_buttons: :horizontal_radio_and_checkboxes }) do |f|%>
-		  		<%= f.input :name %>
+		  		<%= f.input :name, label: "我的姓名" %>
+          <div class="col-sm-offset-2">
+            <%= image_tag(current_teacher.image.avatar) if current_teacher.image.present? %>
+          </div>
 		  		<%= f.input :avatar, as: :file, label: "我的头像" %>
-          <%#= f.input :name, label: "所属系别" %>
+          <%= f.input :grade_id, label: "所属班级" %>
           <%= f.input :final_degree, label: "专业技术职位" %>
           <%= f.input :qualification, label: "资格证书" %>
           <%= f.input :final_education,  collection: Teacher::TeacherDegree.collect{ |p| [p[:text], p[:value]] }, prompt: "请选择学位", label: "我的学历" %>
           <%= f.input :tec_expertise, label: "教学与技术专长" %>
           <%= f.input :phone, label: "手机号码" %>
-          <%#= f.input :name, as: :radio_buttons, collection: ["男", "女"], label: "性别" %>
-          <%#= f.input :name, label: "个性签名" %>
-		  		<%= f.submit "确认修改"%>
+          <%= f.input :sex, as: :radio_buttons, collection: ["男", "女"], label: "性别" %>
+          <%= f.input :signature, label: "个性签名" %>
+		  		<div class="col-sm-6 col-sm-offset-3">
+            <%= f.submit "确认修改", class: "btn btn-success" %>
+            <input class="btn btn-danger" type="button" value="取消修改">
+          </div>
   		 	<%end%>
   		</div>
-  		<div class="infos">
+  		<div class="infos col-sm-offset-3">
   		 	<%= simple_form_for current_teacher, url: update_password_teacher_path(current_teacher, remote: true), html: { class: 'form-horizontal' }, wrapper: :horizontal_form do |f|%>
           <div class="error-info"></div>
           <%= f.input :password, label: "原始密码", placeholder: '请输入原始密码', autofocus: false %>
           <%= f.input :new_password, label: "新密码", placeholder: '请输入新密码', autofocus: false %>
           <%= f.input :confirm_new_password, label: "确认密码", placeholder: '请输入确认密码', autofocus: false %>
-          <div class="form-group">
-            <%= f.submit "确认修改", class: "btn btn-success"%>
+          <div class="col-sm-6 col-sm-offset-3">
+            <%= f.submit "确认修改", class: "btn btn-success" %>
+            <input class="btn btn-danger" type="button" value="取消修改">
           </div>
-          
         <%end%>
   		</div>
   	</div>
